--- a/package.json
+++ b/package.json
@@ -1,45 +1,34 @@
 {
-  "name": "openj9-website",
+  "name": "gatsby-starter-hello-world",
   "private": true,
-  "description": "A Gatsby website for the OpenJ9 ",
+  "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.9.0",
-    "bootstrap": "^4.3.1",
-    "gatsby": "^2.9.6",
-    "gatsby-background-image": "^0.8.0",
-    "gatsby-cli": "^2.7.14",
-    "gatsby-plugin-google-analytics": "^2.1.0",
-    "gatsby-plugin-layout": "^1.1.0",
-    "gatsby-plugin-manifest": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.2.3",
-    "gatsby-source-filesystem": "^2.1.0",
-    "gatsby-transformer-remark": "^2.5.0",
-    "intersection-observer": "^0.7.0",
-    "jquery": "^3.4.1",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "simple-load-script": "^1.0.2",
-    "styled-components": "^4.3.2"
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.18.2"
-  },
-  "keywords": [
-    "gatsby"
-  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "format": "prettier --write src/**/*.{js,jsx}",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "gatsby": "^2.18.12",
+    "gatsby-plugin-emotion": "^4.1.21",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
