--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.27",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.21",
     "gatsby-source-filesystem": "^2.1.48",
