--- a/news-page-content/upcomingEvents.yaml
+++ b/news-page-content/upcomingEvents.yaml
@@ -1,28 +1,20 @@
-- title: "Title 1"
-  date: "2012-02-23"
-  details: "Event Details"
+- title: "It's always sunny with OpenJ9!"
+  confrence: "Devnexus 2020"
+  date: "2020-02-20"
+  location: "Atlanta"
+  speaker: "Dan Heidinga"
+  link: "https://devnexus.com/presentations/4840/"
+  description: "So you’ve been deploying Java in the cloud and are wondering how to handle the new world of containers, microservices,
+  and memory constraints. Cold starts got you down? Come to this session to learn about how the OpenJ9 and the JVM in general can help you
+  on your Cloud Native journey" 
+  
 
-- title: "Title 2"
-  date: "2011-02-23"
-  details: "Event Details"
-
-- title: "Title 3"
-  date: "2010-02-23"
-  details: "Event Details"
-
-- title: "Title 4"
-  date: "2015-02-23"
-  details: "Event Details"
-
-- title: "Title 5"
-  date: "1998-02-23"
-  details: "Event Details"
-
-- title: "Title 6"
-  date: "2019-02-23"
-  details: "Event Details"
-
-- title: "Title 7"
-  date: "2002-02-23"
-  details: "Event Details"
+- title: "OpenJDK panel"
+  confrence: "Devnexus 2020"
+  date: "2020-02-21"
+  location: "Atlanta"
+  speaker: "Dan Heidinga & others"
+  link: "https://devnexus.com/presentations/5136/"
+  description: "Join the folks from all the major JDK distributions on this panel to hear about what’s happening with OpenJDK and on the JVM" 
+  
 
