--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@fortawesome/fontawesome-free": "^5.9.0",
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.21",
+    "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-source-wordpress": "^3.1.60",
     "gatsby-transformer-remark": "^2.6.50",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "simple-load-script": "^1.0.2",
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
