--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-remark": "^2.6.50",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "simple-load-script": "^1.0.2",
     "theme-ui": "^0.3.1"
   },
