--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.18.12",
     "gatsby-plugin-emotion": "^4.1.21",
     "gatsby-plugin-google-analytics": "^2.1.36",
+    "gatsby-plugin-manifest": "^2.4.8",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-source-wordpress": "^3.1.60",
