--- a/package.json
+++ b/package.json
@@ -31,11 +31,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "simple-load-script": "^1.0.2",
-    "theme-ui": "^0.3.1",
-    "xlsx": "^0.16.3"
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
-    "eslint-loader": "^4.0.2",
     "gh-pages": "^2.0.1",
     "prettier": "^1.19.1"
   },
