--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-free": "^5.9.0",
     "chart.js": "^2.9.3",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-client-side-redirect": "^1.1.0",
     "gatsby-plugin-emotion": "^4.1.21",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-manifest": "^2.4.8",
